k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-management-service
  labels:
    app: product-management
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app: product-management
